--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,16 @@
   "name": "Yellowhammer Interview Test Flight",
   "version": "0.0.1",
   "dependencies": {
-    "angular":    "latest",
-    "aws-sdk-js": "latest"
+    "angular": "latest",
+    "aws-sdk-js": "latest",
+    "angular-mocks": "~1.3.0",
+    "jquery": "2.1.1",
+    "bootstrap": "~3.1.1",
+    "angular-route": "~1.3.3",
+    "angular-resource": "~1.3.3",
+    "nprogress": "~0.1.6"
+  },
+  "resolutions": {
+    "angular": "~1.2.11"
   }
 }
