--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
     "bower": "latest",
-    "gulp":  "latest"
+    "gulp": "latest"
+  },
+  "devDependencies": {
+    "karma": "^0.12.28"
   }
 }
